# golike-gauth

./: README.md  pyproject.toml
dist_golike/: golike_gauth-0.1.0-py3-none-any.whl
docs/: G-AUTH-ANALYSIS.md
examples/: basic.py  get_tiktok_job.py  test_tiktok_sig.py
src/golike_gauth/: __init__.py  cli.py  core.py
src/golike_gauth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
